Script support for different displays fixed, jumping animation added.
First testing jumping animation added.

--- a/main.css
+++ b/main.css
@@ -10,8 +10,8 @@ body {
 }
 
 .container {
-	height: 552px;
-	width: 422px;
+	height: 560px;
+	width: 420px;
 	position: relative;
 	overflow: hidden;
 }
